<resources>
    <string name="app_name">CTRL+</string>
    <string name="button">Button</string>
    <string name="screen_share">screen share</string>
    <string name="mouse_move">mouse_move</string>
    <string name="activity_menu">CTRL+ Menu</string>
    <string name="activity_main">CTRL+ Connect</string>
    <string name="activity_scnshare">CTRL+ Screen Share</string>
    <string name="activity_shortcuts">CTRL+ Shortcuts</string>
    <string name="ctrl_mouse_controls">CTRL+ Mouse Controls</string>
    <string name="activity_presentation">CTRL+ Presentation Controls</string>
    <string name="scrbtn_use">Take a screenshot in Server Device</string>
    <string name="newtabbtn_use">Open new Browser tab in Server Device</string>
    <string name="viewprjbtn_use">View Project in Github</string>
    <string name="trmcntbtn_use">Terminate Connection</string>
    <string name="view_for_screen_sharing">view for screen sharing</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="or">--------- OR ---------</string>
    <string name="connect">Connect</string>
    <string name="error">Error</string>
    <string name="please_scan_a_valid_qr_code_to_establish_conection">Please scan a valid QR code to establish connection.</string>
    <string name="ok">OK</string>
    <string name="_00_00">00:00</string>
    <string name="reset">Reset</string>
    <string name="b1">b1</string>
    <string name="start">START</string>
    <string name="b4">b4</string>
    <string name="stop">STOP</string>
    <string name="shortcuts">shortcuts</string>
    <string name="ip_address_">IP Address:</string>
    <string name="presentation">presentation</string>
    <string name="port_address">Port Address:</string>
</resources>